--- a/WindowsX/WindowsX.Shell/Themes/Default.xaml
+++ b/WindowsX/WindowsX.Shell/Themes/Default.xaml
@@ -11,9 +11,11 @@
     <SolidColorBrush x:Key="ButtonDisabledBorderColor" Color="#FFADB2B5"/>
     <SolidColorBrush x:Key="ButtonDisabledForegroundColor" Color="#FF838383"/>
     <SolidColorBrush x:Key="Items.Selected.Foreground" Color="Black"></SolidColorBrush>
+    <SolidColorBrush x:Key="Items.Selected.Background" Color="#FFD0CFCF"></SolidColorBrush>
 
     <Color x:Key="BorderColor">#FF737373</Color>
     <Color x:Key="BorderColorTran" A="120" R="115" G="115" B="115"></Color>
     <Color x:Key="AccentBaseColorShadowColor">#FFC0C0C0</Color>
     <Color x:Key="ItemSelectedColor">#FFC0C0C0</Color>
+    <Color x:Key="AccentColor">Silver</Color>
 </ResourceDictionary>
