--- a/WindowsX/WindowsX.Shell/View/SystemMgmt/Pages/DiskFileManagement.xaml
+++ b/WindowsX/WindowsX.Shell/View/SystemMgmt/Pages/DiskFileManagement.xaml
@@ -96,9 +96,19 @@
                         <Label Grid.Row="1" Content="{Binding ElementName=tree_Statistics,Path=SelectedItem,Converter={StaticResource DiskSizeStatisticsConverter}}"></Label>
                     </Grid>
 
-                    <StackPanel Grid.Row="2">
+                    <DockPanel Grid.Row="2">
+                        <!--<CheckBox Content="应用全部文件夹" Style="{StaticResource CheckBoxStyle}" VerticalAlignment="Top" Name="cbx_SpaceOrderGlobal" Checked="cbx_SpaceOrderGlobal_Checked" Unchecked="cbx_SpaceOrderGlobal_Unchecked"></CheckBox>-->
+                        <Button Content="&#xf160;" Width="30" Height="30" FontSize="20" Margin="3,0,0,0"
+        VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+        ToolTip="按占用空间降序" Name="btn_SpaceDesc" Click="btn_SpaceDesc_Click"></Button>
+                        <Button Content="&#xf161;" Width="30" Height="30" FontSize="20" Margin="3,0,0,0"
+        VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+        ToolTip="按占用空间升序" Name="btn_SpaceAsc" Click="btn_SpaceAsc_Click"></Button>
+                        <Button Content="&#xf0dc;" Width="30" Height="30" FontSize="20" Margin="3,0,0,0"
+        VerticalAlignment="Top" DockPanel.Dock="Left" FontFamily="{StaticResource FontAwesomeFontFamily}" Style="{StaticResource ButtonStyle}"
+        ToolTip="默认排序"  Name="btn_SpaceDefault" Click="btn_SpaceDefault_Click"></Button>
                         <Button Width="88" Height="28" Content="生成统计图表" VerticalAlignment="Top" HorizontalAlignment="Right" Style="{StaticResource ButtonStyle}" Name="btn_Statistics" Click="btn_Statistics_Click"></Button>
-                    </StackPanel>
+                    </DockPanel>
                 </Grid>
 
             </TabItem>
@@ -129,13 +139,15 @@
                                     <Image Source="{Binding Icon}"
            Width="38" Height="38" Stretch="UniformToFill" Grid.RowSpan="3" VerticalAlignment="Center"></Image>
 
-                                    <Label Content="文件类型：" FontWeight="Bold" Grid.Column="1"></Label>
-                                    <Label Content="{Binding FriendlyName}" Grid.Column="2" FontWeight="Bold"></Label>
-                                    <Label Content="打开方式：" Grid.Column="1" Grid.Row="1" FontWeight="Bold"></Label>
-                                    <Label Content="{Binding Executable}" Grid.Column="2" Grid.Row="1"></Label>
+                                    <Label Content="文件类型：" FontWeight="Bold" Grid.Column="1" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
+                                    <Label Content="{Binding FriendlyName}" Grid.Column="2" FontWeight="Bold" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
+                                    <Label Content="打开方式：" Grid.Column="1" Grid.Row="1" FontWeight="Bold" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
+                                    <Label Content="{Binding Executable}" Grid.Column="2" Grid.Row="1" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
 
-                                    <Label Content="文件占比：" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold"></Label>
-                                    <controls:PercentageBar Grid.Row="2" Grid.Column="2"  VerticalAlignment="Center" HorizontalAlignment="Left" Text="{Binding PercentageText}" Height="10" MinWidth="200" Width="300" Value="{Binding Percentage}"></controls:PercentageBar>
+                                    <Label Content="文件占比：" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" FontWeight="Bold" Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></Label>
+                                    <controls:PercentageBar Grid.Row="2" Grid.Column="2"  VerticalAlignment="Center" HorizontalAlignment="Left" Text="{Binding PercentageText}" Height="10" MinWidth="200" Width="300" Value="{Binding Percentage}" 
+                                                            Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"
+                                                            Stroke="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}"></controls:PercentageBar>
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
